--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: jazz
-Title: What the Package Does (one line, title case)
+Package: dance
+Title: Tibble Dancing
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Romain", "François", email = "romain@purrple.cat", role = c("aut", "cre"))
+Description: Tibble dancing()
 Depends: R (>= 3.5.0)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
