+ rumba() :woman_dancing:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,choreography)
 export("%>%")
 export(choreography)
 export(polka)
+export(rumba)
 export(swing)
 export(tango)
 export(tibble)
