--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,map_raw)
+importFrom(purrr,walk)
 importFrom(tibble,tibble)
