salsa, chacha, samba

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,13 @@
 
 S3method(print,choreography)
 export("%>%")
+export(ballet)
+export(chacha)
 export(choreography)
 export(polka)
 export(rumba)
+export(salsa)
+export(samba)
 export(swing)
 export(tango)
 export(tibble)
@@ -26,4 +30,5 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,map_raw)
 importFrom(purrr,walk)
+importFrom(purrr,walk2)
 importFrom(tibble,tibble)
