mambo :man_dancing:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ballet)
 export(bolero)
 export(chacha)
 export(choreography)
+export(mambo)
 export(polka)
 export(rumba)
 export(salsa)
@@ -33,6 +34,7 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,map_raw)
+importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(tibble,tibble)
