reexport and and or from magrittr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ S3method(chacha,data.frame)
 S3method(chacha,grouped_df)
 S3method(print,choreography)
 export("%>%")
+export(and)
 export(ballet)
 export(bolero)
 export(chacha)
 export(choreography)
 export(mambo)
+export(or)
 export(polka)
 export(rumba)
 export(salsa)
@@ -26,6 +28,8 @@ import(tidyselect)
 import(vctrs)
 importFrom(assertthat,assert_that)
 importFrom(glue,glue)
+importFrom(magrittr,and)
+importFrom(magrittr,or)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
