--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(assertthat,assert_that)
 importFrom(glue,glue)
 importFrom(magrittr,and)
 importFrom(magrittr,or)
+importFrom(purrr,as_mapper)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
@@ -43,3 +44,4 @@ importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(tibble,tibble)
+importFrom(utils,head)
