--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(bolero)
 export(chacha)
 export(charleston)
 export(choreography)
+export(madison)
 export(mambo)
 export(or)
 export(polka)
