foxtrot() and bachata()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ S3method(chacha,grouped_df)
 S3method(print,choreography)
 export("%>%")
 export(and)
+export(bachata)
 export(ballet)
 export(bolero)
 export(chacha)
 export(charleston)
 export(choreography)
+export(foxtrot)
 export(madison)
 export(mambo)
 export(or)
@@ -44,5 +46,6 @@ importFrom(purrr,map_raw)
 importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
