factor out slicing details to `slicer::slicer()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(purrr,map_raw)
 importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(slicer,slicer)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
