--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ Imports:
     glue,
     tibble,
     zeallot,
-    utils
+    utils,
+    slicer
 RoxygenNote: 6.1.1
-SystemRequirements: C++11
+Remotes:
+    romainfrancois/slicer
