hold off on using slicer::slicer() until it's ready, to make it easier to contribute without tools

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,5 @@ Imports:
     glue,
     tibble,
     zeallot,
-    utils,
-    slicer
+    utils
 RoxygenNote: 6.1.1
-Remotes:
-    romainfrancois/slicer
