--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,15 +8,15 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    vctrs,
-    rlang,
-    magrittr,
-    dplyr,
-    purrr,
-    assertthat,
-    tidyselect,
-    glue,
-    tibble,
-    zeallot,
+    vctrs (>= 0.1.0),
+    rlang (>= 0.3.1),
+    magrittr (>= 1.5),
+    dplyr (>= 0.8.0.1),
+    purrr (>= 0.3.1),
+    assertthat (>= 0.2.0),
+    tidyselect (>= 0.2.5),
+    glue (>= 1.3.0),
+    tibble (>= 2.0.1),
+    zeallot (>= 0.1.0),
     utils
 RoxygenNote: 6.1.1
