re export dplyr::group_by() until dance has its own function to group by

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(chacha)
 export(charleston)
 export(choreography)
 export(foxtrot)
+export(group_by)
 export(madison)
 export(mambo)
 export(or)
