--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,9 +38,11 @@ importFrom(magrittr,or)
 importFrom(purrr,as_mapper)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_int)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_if)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,map_raw)
