jive() 💃 = bachata() + unnest() + regroup()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(charleston)
 export(choreography)
 export(foxtrot)
 export(group_by)
+export(jive)
 export(madison)
 export(mambo)
 export(or)
