adds travis job checks for development versions of dependent packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,12 @@ env:
   global:
   - R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
   - _R_CHECK_SYSTEM_CLOCK_=FALSE
+
+- r: release
+    env:
+      - DEVEL_PACKAGES=true
+    r_github_packages:
+      - RcppCore/Rcpp
+      - r-lib/rlang
+      - tidyverse/tibble
+      - tidyverse/tidyselect
