using purrr::transpose()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,map_raw)
 importFrom(purrr,reduce)
+importFrom(purrr,transpose)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(tibble,as_tibble)
