--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(chacha,dance_grouped_df)
 S3method(chacha,data.frame)
 S3method(chacha,grouped_df)
 S3method(print,choreography)
+export("%<-%")
 export("%>%")
 export(and)
 export(bachata)
