documentation for swing() and twist()
closes #14
closes #15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,16 +13,25 @@ export(bolero)
 export(chacha)
 export(charleston)
 export(choreography)
+export(contains)
+export(ends_with)
+export(everything)
 export(foxtrot)
 export(group_by)
+export(group_cols)
 export(jive)
+export(last_col)
 export(madison)
 export(mambo)
+export(matches)
+export(num_range)
+export(one_of)
 export(or)
 export(polka)
 export(rumba)
 export(salsa)
 export(samba)
+export(starts_with)
 export(swing)
 export(tango)
 export(tibble)
