improved choreogra^phy printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,11 @@ import(rlang)
 import(tidyselect)
 import(vctrs)
 importFrom(assertthat,assert_that)
+importFrom(crayon,green)
+importFrom(crayon,red)
+importFrom(crayon,silver)
 importFrom(glue,glue)
+importFrom(glue,glue_collapse)
 importFrom(magrittr,and)
 importFrom(magrittr,or)
 importFrom(purrr,as_mapper)
