--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     glue (>= 1.3.0),
     tibble (>= 2.0.1),
     zeallot (>= 0.1.0),
-    utils
+    utils,
+    crayon
 RoxygenNote: 6.1.1
 Suggests: 
     testthat, 
