--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ import(dplyr)
 import(rlang)
 import(tidyselect)
 import(vctrs)
+importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(crayon,green)
 importFrom(crayon,red)
@@ -68,3 +69,4 @@ importFrom(purrr,walk2)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
+useDynLib(dance, .registration = TRUE)
